// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductSummary /> component its snapshot matches story Default 1`] = `
.c1 {
  margin: 0.75rem 0;
}

.c0 {
  color: #525252;
  font: 400 1rem/1.375rem 'IBM Plex Sans',Arial,sans-serif;
}

.c2 {
  display: none;
}

@media (min-width:672px) {
  .c2 {
    display: block;
    font: 400 1rem/1.375rem 'IBM Plex Sans',Arial,sans-serif;
    margin: 0.75rem 0;
  }
}

<div>
  <div
    class="ProductSummarystyles__ProductSummary-sc-1nzm8h2-0"
  >
    <div
      class="c0"
    >
      IBMAC014
    </div>
    <h1
      class="c1"
    >
      Handcrafted Metal Ball
    </h1>
    <div
      class="c2"
    >
      The Nagasaki Lander is the trademarked name of several series of Nagasaki sport bikes, that started with the 1984 ABC800J
    </div>
  </div>
</div>
`;

exports[`<ProductSummary /> component its snapshot matches story Skeleton 1`] = `
.c1 {
  width: 5.5em;
  border-radius: 5px;
  -webkit-animation: pulse 1.2s ease-in-out infinite;
  animation: pulse 1.2s ease-in-out infinite;
  background: linear-gradient(-90deg,#f0f0f0 0%,#f8f8f8 50%,#f0f0f0 100%);
  background-size: 400% 400%;
  display: inline-block;
  height: 100%;
}

.c1::before {
  content: '\\00a0';
}

.c2 {
  margin: 0.75rem 0;
}

.c0 {
  color: #525252;
  font: 400 1rem/1.375rem 'IBM Plex Sans',Arial,sans-serif;
}

.c3 {
  display: none;
}

@media (min-width:672px) {
  .c3 {
    display: block;
    font: 400 1rem/1.375rem 'IBM Plex Sans',Arial,sans-serif;
    margin: 0.75rem 0;
  }
}

<div>
  <div
    class="ProductSummarystyles__ProductSummary-sc-1nzm8h2-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      />
    </div>
    <h1
      class="c2"
    >
      <div
        class="c1"
      />
    </h1>
    <div
      class="c3"
    >
      <div
        class="c1"
      />
    </div>
  </div>
</div>
`;
